--- a/vertical-pod-autoscaler/deploy/vpa-rbac.yaml
+++ b/vertical-pod-autoscaler/deploy/vpa-rbac.yaml
@@ -35,6 +35,7 @@ rules:
       - get
       - list
       - watch
+      - patch
       - create
   - apiGroups:
       - "poc.autoscaling.k8s.io"
@@ -52,6 +53,7 @@ rules:
       - get
       - list
       - watch
+      - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
